feat: add versus screen and  correct game flow
Change getChoice() flow, modify playRound() to
work with UI
Add show/hide function for menus

--- a/index.html
+++ b/index.html
@@ -54,11 +54,16 @@
                     <div id="selectCharacterText" class="color684F3A">Rock, Paper or Scissors ?</div>
                 </div>
                 <div id="selectMenuCharacter">
-                    <img src="assets/images/character/paper.svg">
-                    <img src="assets/images/character/rock.svg">
-                    <img src="assets/images/character/scissors.svg">
+                    <img src="assets/images/character/paper.svg" class="character" id="paper">
+                    <img src="assets/images/character/rock.svg" class="character" id="rock">
+                    <img src="assets/images/character/scissors.svg" class="character" id="scissors">
                 </div>
             </div>
+        </div>
+        <div id="versus">
+            <div id="vsBar"></div>
+            <img id="userCharacter" src="assets/images/character/paper.svg">
+            <img id="computerCharacter" src="assets/images/character/rock.svg">
         </div>
     </div>
 </body>
