feat!: add result screen, add game state arch.
BREAKING CHANGE: Game is now based on states and
a function game(gameState) that manages them,
called by events.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
             <img id="userCharacter" src="assets/images/character/paper.svg">
             <img id="computerCharacter" src="assets/images/character/rock.svg">
         </div>
+        <div id="win">
+            <img id="winUserCharacter">
+            <img id="winComputerCharacter">
+        </div>
+        <div id="lose">
+            <img id="loseUserCharacter">
+            <img id="loseComputerCharacter">
+        </div>
+        <div id="draw">
+            <img id="drawUserCharacter">
+            <img id="drawComputerCharacter">
+        </div>
     </div>
 </body>
 </html>
