feat: add final screen and replay functionality

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </div>
-        <div id="versus">
+        <div id="versusMenu">
             <div id="vsBar"></div>
             <img id="userCharacter" src="assets/images/character/paper.svg">
             <img id="computerCharacter" src="assets/images/character/rock.svg">
@@ -76,6 +76,18 @@
         <div id="draw">
             <img id="drawUserCharacter">
             <img id="drawComputerCharacter">
+        </div>
+        <div id="finalMenu">
+            <div id="userFinalScore" class="finalScoreText"></div>
+            <div id="computerFinalScore" class="finalScoreText"></div>
+            <div id="finalText" class="color684F3A"></div>
+            <img id="finalIcone">
+            <div id="replayButtonSection">
+                <div id="replayButton">
+                    <div id="replayText">Replay</div>
+                    <img src="assets/images/ui/playPanel.svg">
+                </div>
+            </div>
         </div>
     </div>
 </body>
